Fix popup covering the text

--- a/src/common/components/textarea-autocomplete/_index.scss
+++ b/src/common/components/textarea-autocomplete/_index.scss
@@ -9,6 +9,7 @@
     overflow: auto !important;
     min-width: 200px;
     position: absolute;
+    top: 20px !important;
 
     .rta__list {
       list-style: none;
